$Id: CHANGES,v 1.94 2000/12/04 16:05:35 stelian Exp $

Changes between versions 0.4b20 and 0.4b21 (released ?????????????????)
=======================================================================

1.	Fixed some bugs in the dump -w|-W logic introduced by
	the previous version. Thanks to Andreas Dilger 
	<adilger@turbolinux.com> for his help on this one.

2.	Fixed again a compilation problem when using old e2fs
	headers (filesystem label related). Thanks to many users
	who reported this stupid error.

3.	Fixed a build problem on old lib5 based systems dealing with 
	_PATH_MNTTAB being undefined. Thanks to John Adams
	<johna@onevista.com> for reporting the bug.

Changes between versions 0.4b19 and 0.4b20 (released November 10, 2000)
=======================================================================

1.	Fixed a small compilation problem due to a change
	in the definintion of the struct sigaction in
	glibc 2.0 / libc5. Thanks to Gunther Schlegel 
	<schlegel@riege.de> for reporting the bug and to
	Dave Platt <dplatt@snulbug.mtview.ca.us> for suggesting
	a fix.

2.	Modified the label and uuid analysis in order to be 
	self-contained (independant of kernel/libc headers). This 
        should fix the compile with older kernel/libc headers and
	will preserve the functionality. Thanks to Bernhard Erdmann
	<bernhard.erdmann@gmx.de> for reporting the bug.

3.	The 'exclude inode' option, if applied to a directory
	inode, excludes now correctly all the leaves of this 
	directory. Thanks to John R. Dennison 
	<gerdesas@users.sourceforge.net> for reporting the bug.

4.	Fixed the '-e' option to disable the possibility
	to exclude the root inode (which causes the dumps to
	be unreadable by restore). Prevented array overflow
	when multiple -e options are used.

5.	Fixed dump to correctly interpret a filesystem argument
	which is a mountpoint and it is not an absolute path 
	(as specified in the fstab). Thanks to Bernhard R. Erdmann 
	<be@berdmann.de> for reporting the bug.
