@@ -1,4 +1,4 @@
-$Id: THANKS,v 1.40 2000/12/04 16:05:35 stelian Exp $
+$Id: THANKS,v 1.41 2000/12/05 15:43:48 stelian Exp $
 
 Dump and restore were written by the people of the CSRG at the University
 of California, Berkeley.
@@ -63,6 +63,7 @@ Patrik Schindler	poc@pocnet.net
 Gunther Schlegel	schlegel@riege.de
 Chris Siebenmann	cks@utcc.utoronto.ca
 Bob Snyder		rsnyder@janet.advsys.com
+Gabriel Somlo		somlo@cs.colostate.edu
 Matti Taskinen		mkt@rni.helsinki.fi
 Jason L Tibbitts III	tibbs@math.uh.edu
 Mike Tibor		tibor@lib.uaa.alaska.edu
